# QLizzie

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
app/: CMakeLists.txt  README.md  README.zh-CN.md
app/qml/: AboutDialog.qml  AnalysisStatus.js  AnalysisToolbar.qml  AppScrollBar.qml  BeginnerTutorialDialog.qml  BoardInputLayer.qml  BoardInteraction.js  BoardRenderer.js  BoardScene.qml  BoardSizeDialog.qml  BoardSizeStepper.qml  BoardVisuals.js  BranchPanel.qml  CandidateAnalysis.js  CandidateMarkerView.qml  CommandToolbar.qml  ConfirmDeleteNodeDialog.qml  CoordinateUtils.js  EngineCommunicationWindow.qml  EngineFailureDialog.qml  EngineListDialog.qml  EngineParametersDialog.qml  EnginePresets.js  EngineRuleWarningDialog.qml  EngineSupport.js  GameOverDialog.qml  GameRuleComboBox.qml  GameRules.js  GoRuleDialog.qml  GomokuRuleDialog.qml  HelpKeysDialog.qml  HiddenSettingsDialog.qml  HoverCoordinateBadge.qml  InfoPanel.qml  InitialSetupDialog.qml  InkTheme.js  InkWashBackground.qml  Main.qml  NoRuleVariantDialog.qml  RuleChangeSaveDialog.qml  (+11 more)
app/qml/rules/: RuleCatalog.js
app/resources/: qlizzie.rc
app/src/: appsettings.cpp  appsettings.h  enginecontroller.cpp  enginecontroller.h  fileio.cpp  fileio.h  gomokuforbidden.cpp  gomokuforbidden.h  main.cpp
cmake/: PackagePortable.cmake
launcher/: CMakeLists.txt
launcher/src/: launcher.cpp
